<resources>
    <string name="app_name"> SupBlois </string>
    <string name="action_settings"> Settings </string>
    <string name="first_name"> first name </string>
    <string name="last_name"> last name </string>
    <string name="account"> account </string>
    <string name="password"> password </string>
    <string name="me"> me </string>
    <string name="other"> other </string>
    <string name="receive_message"> receive </string>
    <string name="login"> login </string>
    <string name="create_account"> Create Account </string>
    <string name="add_user"> Add User </string>
    <string name="phone_number"> phone number</string>
    <string name="send_message"> Send </string>
    <string name="login_failed_msg">Wrong phone number or password</string>

</resources>
