<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/accountLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        android:ems="10"
        android:inputType="phone"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/passwordLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="256dp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/accountLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:text="@string/phone_number" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:textSize="12sp"
        android:text="@string/login" />

    <Button
        android:id="@+id/createAccountLoginButton"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:textSize="12sp"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/accountNotExistsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/accountLoginEditText"
        android:layout_marginTop="325dp" />
</RelativeLayout>