<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/addUserTextView"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="117dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="phone"
        android:text=""
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/phoneNumberCreateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/passwordCreateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/passwordCreateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordCreateEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/accountAlreadyExistsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/phoneNumberEditText"
        android:layout_marginTop="410dp"/>

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="198dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:layout_marginTop="279dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/first_name"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="261dp"
        android:text="@string/last_name"
        android:textColor="@color/text_color" />
</RelativeLayout>